fixed insta url, updated logo, edited bio layout slightly, made always blue

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,13 @@ a {
   /* font-size: 16px; */
 }
 
+.prettyColor {
+  background-color: #02A4D3;
+}
+
+.prettyFontColor {
+  color: #02A4D3;
+}
 
 
 .instagramLogo {
