--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 
 /* Font Import */
-@import url('https://fonts.googleapis.com/css?family=Muli');
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
 
 html,body {
     /* box-sizing: border-box; */
     margin: 0px;
     padding: 0px;
-    font-family: 'Muli', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     /* font-family: 'Raleway', sans-serif; */
 }
 
