--- a/css/style.css
+++ b/css/style.css
@@ -27,36 +27,37 @@ h1 {
   padding-right: 5px;
 }
 
-#instafeed {
-  /* border-style: solid;
-  border-width: 1px;
-  border-color: #000; */
+.dynamicPanel {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
 }
 
 #instaFeedContainer {
-  padding-left: 45px;
   font-size: 23px;
-  width: 40%;
+  width: 50%;
+  padding: 20px;
+  align-self: flex-end;
+  margin: 0 auto !important;
 }
 
 .instaFeedDescription {
-  font-size: 12px;
+  font-size: 16px;
+  /* color: #fff; */
 }
 
 /* main */
 .announcePanel {
-  padding-left: 45px;
-  padding-right: 40px;
-  /* text-align: center; */
+  padding: 20px;
   font-size: 23px;
   width: 50%;
-  float: right;
 }
 
 /* main */
 .announceTitle {
   text-decoration: none;
   color: #479ec6;
+  /* color: #fff; */
   font-weight: bold;
   font-size: 18px;
 }
@@ -101,6 +102,7 @@ h1 {
 
 .mainDescription {
   font-size: 20px;
+  /* color: #fff; */
 }
 
 .appDownloadButtons {
@@ -326,6 +328,21 @@ h1 {
   .dlButton {
     width: 50%;
     padding-bottom: 10px;
+  }
+
+  .dynamicPanel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  #instaFeedContainer {
+    width: 90%;
+  }
+
+  .announcePanel {
+    width: 80%;
   }
 
   .firstPanelBody {
